Support jdk17